# 3DGameStarter

./: .gitignore  CMakeLists.txt  README.md
android/: CMakeLists.txt  build.gradle  local.properties
android/assets/conf/: 3DShader.frag  3DShader.vert
android/gradle/wrapper/: gradle-wrapper.properties
conf/: 3DShader.frag  3DShader.vert  shader.vert
include/: Definitions.h  Entity.h  GameView.h  Graphics.h  GraphicsObject.h  GraphicsObjectGL.h  GraphicsUtils.h  Shader.h
source/: GameModel.cpp  GameView.cpp  Graphics.cpp  GraphicsObjectGL.cpp  GraphicsUtils.cpp  OS_GLFW.cpp  Resources.cpp
